--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </nav>
 
   <header class="header">
-      <img class="logo" src="imgs/DALL·E 2025-02-16 21.13.28 - A sleek and modern anime-style logo for an anime website named 'AnimeGhost'. The logo retains its previous design, featuring a cute anime girl with a .webp" alt="AnimeGhost">
+      <img class="logo" src="imgs/logoHD.webp" alt="AnimeGhost">
       
     </header>
     <main>
