--- a/favoritos.html
+++ b/favoritos.html
@@ -18,7 +18,7 @@
   </script>
 </head>
 <body class="light">
-  <header class="favheader"> <img src="imgs/Capturar.PNG" alt="logo" class="logo"></header>
+  <header class="favheader"> <img src="imgs/Logo-lowRES.PNG" alt="logo" class="logo"></header>
     <nav class="navbar">
     
     <ul class="navbar-nav">
